--- a/apps/docs/src/stories/principles/design-tokens/colors.mdx
+++ b/apps/docs/src/stories/principles/design-tokens/colors.mdx
@@ -13,7 +13,7 @@ import { Markdown } from '@storybook/blocks'
 #### Solid Gray
 
 <Markdown>
-{`
+  {`
 | scale | CSSカスタムプロパティ名 | カラーコード | プレビュー |
 | --- | --- | --- | --- |
 | 50 | --color-solid-gray-50 | #f2f2f2 | <p style="background-color: #f2f2f2; width:1rem; height:1rem;" /> |
@@ -32,9 +32,7 @@ import { Markdown } from '@storybook/blocks'
 </Markdown>
 
 ```html
-<span class="text-red-900">
-  This is color-solid-gray-900
-</span>
+<span class="text-red-900"> This is color-solid-gray-900 </span>
 ```
 
 #### Opacity Gray
